Se completo el diccionario y se probo la funcionalidad hasta cierto punto. Pueden haber algunos errores pero en general funciona bien

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ PC/Taller 1 Diccionario/.vscode/tasks.json
 PC/Taller 1 Diccionario/.vscode/settings.json
 PC/Taller 1 Diccionario/.vscode/launch.json
 PC/Taller 1 Diccionario/.vscode/c_cpp_properties.json
+PC/Taller 1 Diccionario/tempCodeRunnerFile.cpp
